Fix overflows temporarily

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -47,3 +47,39 @@
 .date-range__label {
   width: 4rem;
 }
+
+.au-c-main-container {
+
+  @include mq($until: large) {
+    overflow: scroll;
+  }
+}
+
+.au-c-main-container__content {
+  flex-basis: 100%;
+
+  @include mq($until: large) {
+    overflow: visible;
+    height: auto;
+  }
+
+  @include mq($from: large) {
+    height: 100%;
+    flex-basis: 0;
+    flex-grow: 999;
+  }
+}
+
+.au-c-main-container__sidebar {
+  flex-basis: 100%;
+
+  @include mq($until: large) {
+    overflow: visible;
+    height: auto;
+  }
+
+  @include mq($from: large) {
+    flex-basis: 35rem;
+    height: 100%;
+  }
+}
